--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
 <div><strong>CONTACT</strong></div>
 <p>
 Nous écrire:<br>
-Pour toute question, appelez-nous au : 01 02 03 04 05<br> 
+Pour toutes questions, appelez-nous au : 01 02 03 04 05<br> 
 Adresse:
 01, rue du Paris
 75001 Paris, France<br>
 Mail: carlos2103@outlook.fr
 <br><br>
-Offres d'emploi
-Pour postuler, envoyez votre C.V à l'adresse e-mail suivant : carlos2103@outlook.fr
+Pour postuler, envoyez votre CV à l'adresse e-mail suivante : carlos2103@outlook.fr
 <br><br>
 Devis gratuit : 01 02 03 04 05
 </p>
@@ -86,21 +85,21 @@ Devis gratuit : 01 02 03 04 05
 <div><strong>SERVICES</strong></div>
 <p>
 <strong>COACHING COMMUNICATION</strong><br>
-Nous sommes fiers de mettre à votre disposition des <strong>methodes</strong> qui vous permettront de créer de magnifiques Projets, Sites,  ou Autres Domaines,<br><br>
+Nous sommes fiers de mettre à votre disposition des <strong>méthodes</strong> qui vous permettront de créer de magnifiques projets, sites, ou autres domaines.<br><br>
 
 <strong>STRATÉGIE</strong><br>
-1 Présentez votre entreprise, vos services et vos équipes.<br>
-2 Soulignez vos avantages par rapport à vos concurrents.<br>
-3 Démarquez-vous et captivez l'attention de vos visiteurs.<br><br>
+1 Présentez votre entreprise, vos services et vos équipes<br>
+2 Soulignez vos avantages par rapport à vos concurrents<br>
+3 Démarquez-vous et captivez l'attention de vos visiteurs<br><br>
 
 <strong>GESTION</strong><br>
-1 Équipez-vous du Matériel Adéquate a votre Activite.<br>
-2 Organiser toujours et a tout moment vos Affaires.<br>
-3 Faites une Liste.<br><br>
+1 Équipez-vous du matériel adéquat en fonction de votre activité<br>
+2 Organiser toujours et à tout moment vos affaires<br>
+3 Faites une liste<br><br>
 
 <p>EXEMPLES:</p>
 CONTRÔLE HUILE ET FREINS<br>
-MÉCANIQUES DÉDIÉS<br>
+MÉCANIQUE<br>
 CONTRÔLE DES VÉHICULES<br>
 RÉPARATION<br>
 Service de réparation de carrosserie, travaux de mécanique
@@ -112,20 +111,17 @@ PEINTURE<br>
 Service d'entretien et de peinture pour carrosserie et jantes. Choix de teintes métallisées<br><br>
 
 GESTION DE PROJET
-1 h
-220 euros
+1 h _
 220 €
 Réserver
 <br>
 COMMUNICATION
-1 h
-150 euros
+1 h _
 150 €
 Réserver
 <br>
 COACHING STRATÉGIE
-1 h
-170 euros
+1 h _
 170 €
 Réserver</p>
 
@@ -136,13 +132,11 @@ Mettez vos clients en appétit. Décrivez en quelques mots votre menu ici.
 <br><br>
 ENTRÉES<br>
 Section de votre menu. Ajoutez une courte description.<br>
-Salade de tomates:<br>
-élément de votre menu. Ajoutez une courte description.
+Salade de tomates: élément de votre menu. Ajoutez une courte description.
+<br><br>
+Salade verte composée: élément de votre menu. Ajoutez une courte description.
 9,00 €<br><br>
-Salade verte composée:<br>
-élément de votre menu. Ajoutez une courte description.
-9,00 €<br><br>
-Salade César au choux kale:<br>
+Salade César:<br>
 élément de votre menu. Ajoutez une courte description.
 9,00 €<br><br>
 Chou-fleur grillé:<br>
@@ -158,25 +152,21 @@ Réserver
 <br><br>
 Français<br>
 45 Min
-39 euros
 39 €
 Réserver
 <br><br>
 Sciences<br>
 45 Min
-39 euros
 39 €
 Réserver
 <br><br>
 Histoire<br>
 45 Min
-39 euros
 39 €
 Réserver
 <br><br>
-Math<br>
+Mathématiques<br>
 45 Min
-39 euros
 39 €
 Réserver<br><br>
 
@@ -221,11 +211,11 @@ Expliquez à vos visiteurs
 <div><strong>A PROPOS</strong></div>
 <p>
 DEPUIS PLUS DE 30 ANS !
-En soutien aux petits commerces, nous avons pris la decision de faire de la Communication, afin de developper leur entreprise.<br><br>
+En soutien aux petits commerces, nous avons pris la decision de faire de la communication, afin de developper leur entreprise.<br><br>
 <strong>METODE</strong><br> 
-1 Expliquez présentez votre "Activité" "vos motivations" et "votre parcours".<br> 
-2 Ajouter votre propre "Experience" dans votre Activite.<br>  
-3 Ajouter votres "Reusites" et "Inconvenients".<br>
+1 Expliquez votre "Activité" vos "motivations" et "votre parcours".<br> 
+2 Ajouter votre propre "Experience" dans votre activité.<br>  
+3 Ajouter vos "Reusites" et "Inconvenients".<br>
   
 <h6>IL SUFFIT DE PARTAGER VOS CONNAISSANCES AVEC NOUS</h6> 
 <h6>COMME TOUS LES AUTRES MEMBRES DU SITE</h6>
@@ -236,7 +226,7 @@ En soutien aux petits commerces, nous avons pris la decision de faire de la Comm
 <div id="projets"></div><br><br><br><br>	
 <div><strong>PROJETS</strong></div>
 
-<div>CLICK SUR L'IMAGE DE VOTRE PROJET</div>
+<div>CLIC SUR L'IMAGE DE VOTRE PROJET</div>
 <div class="photoprojets">
 <p><a href= "servicessitevitrine4.html#entrepreneur"><img src="resto.jfif" alt="photo"></a></p>	
 <p><a href= "servicessitevitrine4.html#batiment"><img src="batiment.jpg" alt="photo"></a></p>	
@@ -255,16 +245,12 @@ En soutien aux petits commerces, nous avons pris la decision de faire de la Comm
 <p><a href= "servicessitevitrine4.html#restauration"><img src="seveurrestaurant.jpeg" alt="photo"></a></p>	
 <p><a href= "servicessitevitrine4.html#batiment"><img src="btpplombier.jpg" alt="photo"></a></p>
 </div>	
-<p>		
-En Soutien aux petits commerces: Demande un "geste patriotique" aux Français
-Dix millions de pauvres en 2020,
-</p>
 
 <!--<div id="programme"></div><br><br>-->	
 <p>PROGRAMME:</p>
 <p>
 conférence:<br>
-LUNDI
+LUNDI -
 ​9h00 - 12h00
 ajouter votre propre texte.
 
@@ -275,7 +261,7 @@ ajouter votre propre texte.
 
 ajouter votre propre texte.
 <br><br>
-MARDI
+MARDI -
 ​9h00 - 12h00
 
 ajouter votre propre texte.
@@ -292,7 +278,7 @@ ajouter votre propre texte.
 
 ajouter votre propre texte.
 <br><br>
-MERCREDI
+MERCREDI -
 ​9h00 - 12h00
 
 ajouter votre propre texte.
@@ -309,7 +295,6 @@ ajouter votre propre texte.
 
 ajouter votre propre texte.
 
-2023 par Conféren. Créé avec .com
 </p><br><br>
 	
 <div id="membre"></div><br><br><br><br>
@@ -317,19 +302,19 @@ ajouter votre propre texte.
 <p>
 Devenez membre !
 
-Un bureau génial
+Un bureau génial,
 
-5 x 1 heure gratuite en
+5 heures gratuites en
 
-salle de réunion
+salle de réunion,
 
-Accès à une communauté géniale d'entrepreneurs et de créatifs
+Accès à une communauté géniale d'entrepreneurs et de créatifs,
 
-Internet haut débit 2GB
+Internet haut débit 5GB,
 
-Appels Illimités vers l'Étranger
+Appels illimités vers l'Étranger,
 
-Happy hour tous les vendredis dès 18h, alcool gratuit
+Happy hour tous les vendredis dès 18h.
 </p>
 
 
@@ -365,52 +350,41 @@ info@monsite.fr
 <div id="membre"></div><br><br><br>	
 <div><strong>ESPACE MEMBRES</strong></div>
 <p>
-ENTRE VOTRE MOT DE PASS
-ICI VOUS POUVAIS COMMUNIQUER AVEC LES MEMBRES SUR LE MEME SUJET/ACTIVITE. 
+ENTREZ VOTRE MOT DE PASSE
+ICI VOUS POUVEZ COMMUNIQUER AVEC LES MEMBRES SUR LE MEME SUJET/ACTIVITE. 
 <input type="text" name=""><input type="submit" name=""></p>
 
 
 <div id="actualite"></div><br><br><br><br>
 <div><strong>ACTUALITES</strong></div>
-<p>
-Les nouvelles tendances
-Prochaines rénovations
-Nos secrets d'intérieur
-L'équipe féminine de robotique remporte le prix	
-	
-Coronavirus : la situation dans le monde, le jeudi 12 janvier, les pays les plus touchés 
-</p>
+
 <!--<div id="actualite"></div><br><br>-->	
 <p>TITRES:</p>
 <p>	
-MEMBRES
-ACCUEIL
-FORUM
-BLOG
-MEMBRES
-À PROPOS
-CONTACT
+MEMBRES,
+ACCUEIL,
+FORUM,
+BLOG,
+À PROPOS,
+CONTACT.
 </p>
 
 
 <p>Événements:</p>
 <p>
-23
-sam.
+sam.23
 sept.
 10 000 € contre le cancer du sein
 Paris
 S'inscrire
 <br><br>
-20
-lun.
+lun.20
 nov.
 Les femmes ingénieurs enseignent le Javascript
 Paris
 S'inscrire
 <br><br>
-19
-mar.
+mar.19
 déc.
 Conférence : Discrimination salariale
 Paris
