--- a/servicessitevitrine4.html
+++ b/servicessitevitrine4.html
@@ -104,16 +104,16 @@ Expliquez à vos visiteurs<br>
 <section class="membre">
 Utilisez cet espace pour décrire votre activité. 
 Expliquez à vos visiteurs<br>	
-<label>DANS QUEL ACTIVITE RENCONTRE VOUS DE PROBLEMMES ?</label><br>	
+<label>DANS QUELLE ACTIVITE RENCONTREZ VOUS DES PROBLEMES ?</label><br>	
 <form><!-- FORMULAIRE 1 -->
 <input type="checkbox" name="frites"/><label>logiciels</label><br><!--A COCHER SIMPLE-->
 <input type="checkbox" name="frites"/><label>ordinateurs</label><br>	
-<input type="checkbox" name="frites"/><label>aplications</label><br>	
-<input type="checkbox" name="frites"/><label>saummon</label><br>	
-<input type="checkbox" name="frites"/><label>cafe</label><br>	
+<input type="checkbox" name="frites"/><label>applications</label><br>	
+<input type="checkbox" name="frites"/><label>saumon</label><br>	
+<input type="checkbox" name="frites"/><label>café</label><br>	
 <input type="checkbox" name="frites"/><label>soupe</label><br>	
-<input type="checkbox" name="frites"/><label>pates</label><br>	
-<input type="checkbox" name="frites"/><label>boison</label><br>	
+<input type="checkbox" name="frites"/><label>pâtes</label><br>	
+<input type="checkbox" name="frites"/><label>boisson</label><br>	
 <input type="checkbox" name="frites"/><label>salade</label><br>	
 <input type="checkbox" name="frites"/><label>poulet</label>
 </form>
